<resources>
    <string name="app_name">102501</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="register">Register</string>
    <string name="sexwomen">sexwomen</string>
    <string name="password">Password</string>
    <string name="sextman">sextman</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
</resources>
